added function of buttons and numbers

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                     <p class="lead">Try to match the number provided without going over.</p>
                  </div>
             </div>
-            <div class="container" id="numberToMeet">
-                <h2>Number to Meet:</h2>
+            <div class="container">
+                <h2>Number to Meet: <span id="number-to-meet"></span></h2>
             </div>
             <br>
-            <div class="container" id="manyWins">
-                <h3>How many times you have won:</h3>
+            <div class="container">
+                <h3>Wins: <span id="many-wins"></span></h3>
             </div>
             <br>
-            <div class="container" id="manyLoses">
-                    <h3>How many times you have lost:</h3>
+            <div class="container">
+                    <h3>Losses: <span id="many-loses"></span></h3>
             </div>
             <br>
             
